@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2452 2004/03/02 21:55:19 andijahja Exp $
+ * $Id: ChangeLog,v 1.2453 2004/03/02 22:42:04 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-03 00:30 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
+  * source/rtl/gtapi.c
+    ! Close handler was not freed in hb_gtExit(), causing a leak warining.
 
 2004-03-02 23:50 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
    * xharbour/source/vm/itemapi.c
